<resources>
    <string name="app_name">DicoApp</string>
    <string name="title_menu_home">Home</string>
    <string name="title_menu_upcoming">Upcoming</string>
    <string name="title_menu_finished">Finished</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="event_title_name">Nama Event Dicoding</string>
    <string name="event_desc">Deskripsi singkat event…</string>
    <string name="search_events">Search events</string>
    <string name="this_is_the_poster_event">this is the poster event</string>
    <string name="search_upcoming_event">Search upcoming event...</string>
    <string name="search_finished_event">Search finished event...</string>
    <string name="tv_finished_event">Finished Event</string>
    <string name="tv_upcoming_event">Upcoming Event</string>
    <string name="upcoming_event_not_found">Belum ada event yang akan diselenggarakan dalam waktu dekat</string>
    <string name="event_not_found">Event yang dicari tidak ditemukan</string>
    <string name="tv_date">24 Agustus 2024</string>
    <string name="tv_time">19:00</string>
    <string name="tv_location">Bandung</string>
    <string name="tv_quota">1000</string>
    <string name="btn_register">Register</string>
    <string name="tv_owner">by Dicoding</string>
    <string name="tv_event_category">Event category</string>
    <string name="tv_event_info">Event Info</string>
    <string name="tv_event_summary">Event Summary</string>
</resources>