<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/event_horizontal_card_event"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_marginVertical="4dp"
    android:textAppearance="?android:attr/textAppearanceListItemSmall"
    card_view:layout_constraintCircleRadius="16dp"
    card_view:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_media_cover"
            android:layout_width="match_parent"
            android:layout_height="224dp"
            android:contentDescription="@string/this_is_the_poster_event"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toTopOf="@id/ll_event_summary"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/ll_event_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/iv_media_cover"
            app:layout_constraintTop_toBottomOf="@id/iv_media_cover">

            <TextView
                android:id="@+id/tv_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/event_title_name" />

            <TextView
                android:id="@+id/tv_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_event_name"
                app:layout_constraintTop_toBottomOf="@id/tv_event_name"
                tools:text="@string/event_desc" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>